[project]
name = "fcsm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6.1",
    "nltk>=3.9.2",
    "pgmpy>=1.0.0",
    "pyparsing>=3.1.2",
    "requests>=2.32.3",
    "numpy>=2.1.3",
    "matplotlib>=3.9.0",
    "streamlit>=1.40.0",
]
