[project]
name = "fcsm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "nltk>=3.9.2",
    "numpy>=2.4.0",
    "openai>=1.56.0",
    "pgmpy>=1.0.0",
    "pyparsing>=3.3.1",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "streamlit>=1.52.2",
    "transformers>=4.57.3",
    "tqdm>=4.66.0",
    "scikit-learn>=1.5.0",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.16.0",
    "optuna>=4.6.0",
]

# You can keep or remove the [tool.uv] sections; they won't trigger if torch isn't in dependencies.